# peep

./: Cargo.toml  README.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
Formula/: peep.rb
docs/product-hunt/: README.md  checklist.md  copy.md  release-notes-template.md
docs/product-hunt/templates/: gallery-01-hero.html  gallery-02-zero-config.html  gallery-03-visibility.html  gallery-04-focus.html  gallery-05-terminal.html  product-hunt.css  thumbnail.html
docs/superpowers/plans/: 2026-04-17-peep-pixel-sprite-redesign.md
docs/superpowers/specs/: 2026-04-17-peep-pixel-sprite-redesign-design.md
examples/: demo_b_hybrid.rs  demo_c_minimal.rs  demo_d_combined.rs  demo_e_stickman.rs  demo_f_party.rs  demo_g_chicken.rs  export_marketing_assets.rs  pixel_demo.rs
scripts/: generate_product_hunt_assets.sh  verify_launch_paths.sh
src/: config.rs  main.rs  update.rs
src/collector/: http_server.rs  jsonl_watcher.rs  mod.rs
src/protocol/: hook_payload.rs  jsonl_payload.rs  mod.rs  normalize.rs  types.rs
src/store/: analytics.rs  metrics.rs  mod.rs  state.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs  theme.rs
src/tui/sprites/: characters.rs  chicken.rs  effects.rs  leader.rs  maze.rs  mod.rs  party.rs  renderer.rs  stage_state.rs  style.rs
src/tui/widgets/: agent_detail.rs  agent_sidebar.rs  feed_table.rs  mod.rs  session_table.rs  stage.rs  status_bar.rs  tab_bar.rs
