[package]
name = "packmen-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for monitoring Claude Code agent sessions"
license = "MIT"
repository = "https://github.com/jsleemaster/packmen-tui"
keywords = ["tui", "claude", "agent", "monitoring", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
walkdir = "2"
toml = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
