[package]
name = "peep"
version = "0.5.12"
edition = "2021"
description = "Peep into your AI coding agents — terminal dashboard with pixel art"
license = "MIT"
repository = "https://github.com/jsleemaster/peep"
keywords = ["tui", "ai", "agent", "monitoring", "terminal", "claude", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
walkdir = "2"
toml = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
unicode-width = "0.2"

[features]
default = ["update-check"]
update-check = ["reqwest", "flate2", "tar"]
